--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/filmdb
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:codingroot1!}
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
+server.port=5000
+security.basic.enable: false
+security.ignored=/**
