--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -28,10 +28,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
       - name: Setup Java 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '21'
           cache: maven
+          cache-dependency-path: |
+             **/pom.xml
       - name: Maven Install
         run: mvn clean install
