--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -37,3 +37,7 @@ jobs:
              **/pom.xml
       - name: Maven Install
         run: mvn clean install
+      - name: Upload Jar
+        uses: actions/upload-artifact@v4
+        with:
+          name: FilmDBJar
