--- a/.github/workflows/docker-prod.yaml
+++ b/.github/workflows/docker-prod.yaml
@@ -19,9 +19,9 @@ jobs:
       mysql:
         image: mysql
         env:
-          MYSQL_DATABASE: ${{ vars.MYSQL_DATABASE }}
-          MYSQL_PASSWORD: ${{ vars.MYSQL_PASSWORD }}
-          MYSQL_ROOT_PASSWORD: ${{ vars.MYSQL_ROOT_PASSWORD }}
+          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
         ports:
           - 3306:3306
     steps:
